casi listo completo, :P

--- a/Hotelera/master.Master
+++ b/Hotelera/master.Master
@@ -5,27 +5,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Hotel Oceanical</title>
-    <asp:ContentPlaceHolder ID="head" runat="server"><!-- aqui si necesitamos agregar algun estilo en particulas segun sea la pagina -Ismael -->
+    <asp:ContentPlaceHolder ID="head" runat="server">
+        <!-- aqui si necesitamos agregar algun estilo en particulas segun sea la pagina -Ismael -->
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <!--Soy horrible con el diseño, la idea es que esto flote al lado derecho, y contenga todo el contenido en si de la pagina -Ismael -->
-        <div style="display:inline-block;margin-top:100px;margin-left:25%">
-            <asp:ContentPlaceHolder ID="centerpage" runat="server">
+        <div>
+            <table>
+                <tr>
+                    <td>
+                        <div style="float: left; margin-top: 50px; margin-left: 10px">
+                            <!-- aqui tenemos el elemento que mantiene los hiperviculos, los añadimos mediante codebehind en base a si esta logeado, u otros -Ismael -->
+                            <asp:Menu ID="navmenu" runat="server" Orientation="Vertical" OnMenuItemClick="navmenu_MenuItemClick" />
+                            <asp:ContentPlaceHolder ID="menubar" runat="server">
+                                <!-- aqui tenemos un espacio en caso necesitemos añadir algo en especial -Ismael -->
 
-            </asp:ContentPlaceHolder>
+                            </asp:ContentPlaceHolder>
+                        </div>
+                    </td>
+                    <td style="width:50px">
+                        <!--Solo para ajustar un poco las cosas -->
+                    </td>
+                    <td>
+                        <div style="float: right; margin-top: 100px; margin-left: 25%;width:600px">
+                            <asp:ContentPlaceHolder ID="centerpage" runat="server">
+                            </asp:ContentPlaceHolder>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
-        <!--La idea es que flote, no se al lado izquerdo, y contenga los hipervinculos a otras paginas, o alguna cosa adicional -Ismael -->
-        <div style="float:left;margin-top:50px;margin-left:10px">
-            <!-- aqui tenemos el elemento que mantiene los hiperviculos, los añadimos mediante codebehind en base a si esta logeado, u otros -Ismael -->
-            <asp:Menu ID="navmenu" runat="server" Orientation="Vertical" OnMenuItemClick="navmenu_MenuItemClick"/>
-            <asp:ContentPlaceHolder ID="menubar" runat="server"><!-- aqui tenemos un espacio en caso necesitemos añadir algo en especial -Ismael -->
-
-            </asp:ContentPlaceHolder>  
-        </div>
-    </div>
     </form>
 </body>
 </html>
